First CSS grid implementation

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello World
+<!doctype html>
+
+<html>
+<head>
+      <meta charset="utf-8">
+      <title></title>
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+      <link rel="stylesheet" href="css/normalize.css">
+      <link rel="stylesheet" href="css/main.css">
+      <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=PT+Sans&display=swap" rel="stylesheet">
+      <meta name="theme-color" content="#fafafa">
+</head>
+<body>
+  <aside>
+    <img id="propic" src="./images/propic.jpg" />
+    <h3>ABOUT ME</h3>
+    <h3>CONTACT</h3>
+  </aside>
+
+  <main>
+    <h1>Paolo Zanchi</h1>
+    <h3>Work Experience</h3>
+  </main>
+</body>
+</html>
