Remove local dependency, change canonical url

--- a/index.htm
+++ b/index.htm
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
         <title>Tracciamento spese mensili</title>
-        <link rel="stylesheet" href="./bootstrap-4.4.1/css/bootstrap.min.css" />
-        <link rel="canonical" href="https://loganblades.altervista.org/projects/tracciaSpese/" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="canonical" href="https://paolozanchi.github.io/" />
         <meta name="theme-color" content="#fb8f31" />
 
         <script src="https://www.gstatic.com/charts/loader.js"></script>
