Add more categories

--- a/index.htm
+++ b/index.htm
@@ -70,12 +70,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-8 mainSide">
-                    <div class="row">
+                <div class="col-8 h-100 d-flex flex-column mainSide">
+                    <div class="row flex-grow-1">
                         <div id="lineChart_div" class="col-12"></div>
                     </div>
-                    <div class="row">
-                        <div id="pieChart_div" class="col-4"></div>
+                    <div class="row flex-grow-1">
+                        <div id="pieChart_div" class="col-5"></div>
                     </div>
                 </div>
             </div>
